# crombie2

./: .gitignore  Makefile.am  Makefile.in  README.md  configure  configure.ac
docs/: Doxyfile  check.pl
include/crombie2/: AllController.h  AllModels.h  Analyzer.h  BoolConfigurable.h  Compare.h  CompareModel.h  ConfigModel.h  ConfigPage.h  ConfigRef.h  ConfigTable.h  Configurable.h  Controller.h  CrossSecDB.h  Cut.h  CutController.h  CutModel.h  CutString.h  CutflowAnalyzer.h  CutflowAnalyzerMaster.h  CutflowRefs.h  Cuts.h  CutsController.h  DatacardController.h  DatacardModel.h  EnvelopeModel.h  Envelopes.h  Error.h  FileController.h  FileEntry.h  FileGroup.h  FileModel.h  FileSystem.h  FitConfig.h  FitController.h  FitModel.h  FlatUncertainty.h  GlobalController.h  GlobalModel.h  GuiConfigurable.h  Hist.h  (+53 more)
src/: AllController.cpp  AllModels.cpp  BoolConfigurable.cpp  Compare.cpp  CompareModel.cpp  ConfigModel.cpp  ConfigPage.cpp  ConfigRef.cpp  ConfigTable.cpp  Configurable.cpp  Controller.cpp  CrossSecDB.cpp  Cut.cpp  CutController.cpp  CutModel.cpp  CutString.cpp  CutflowAnalyzer.cpp  CutflowAnalyzerMaster.cpp  Cuts.cpp  CutsController.cpp  DatacardController.cpp  DatacardModel.cpp  EnvelopeModel.cpp  Envelopes.cpp  Error.cpp  FileController.cpp  FileEntry.cpp  FileModel.cpp  FileSystem.cpp  FitConfig.cpp  FitController.cpp  FitModel.cpp  FlatUncertainty.cpp  GlobalController.cpp  GlobalModel.cpp  GuiConfigurable.cpp  Hist.cpp  Hist2D.cpp  HistAnalysis.cpp  HistAnalyzer.cpp  (+38 more)
test/: main.cpp  setdir.h  test_configurable.cpp  test_configurable.h  test_cutstring.cpp  test_datacardmodel.cpp  test_dir.h  test_envmodel.cpp  test_fileentry.cpp  test_filemodel.cpp  test_fit.cpp  test_hist.cpp  test_lumiselection.cpp  test_misc.cpp  test_parser.cpp  test_parser.h  test_plot.cpp  test_replace.cpp  test_shell.cpp  test_simplemodel.cpp  test_testconfig.cpp  test_testconfig.h  utils.cpp  utils.h
